<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/versecity"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textAllCaps="false"

                android:textColor="?android:textColorPrimary"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="?android:textColorPrimary"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:fontFamily="sans-serif-condensed"
                android:text="This is a private limited liability Company which In the name of making life easier for youth and making the environment a better place,Use Software\'s to solve problems challenged by youth in Nigeria."
                android:textAlignment="center"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="sans-serif-condensed"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:textColor="?android:textColorPrimary"
                android:text="We do this by checking out problems ,face by a large majority , and after careful and well established data collection on the problem , we create a team and with the appropriate software either mobile , website e.t.c to solve such problem.\nTherefore making the world a better place, As we create new softwares to solve problem , we also leverage on existing softwares such as whatsapp , facebook , telegram , instagram , linkedln e.t.c to make sure our users get the best of our platform .."
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="?android:textColorPrimary"
                android:text="We also try to stay true to our core values that users comes first. As we Quote \'\' \'We at VerseCity Spit the Verse in their favor\'\n"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginTop="5dp"
                android:textColor="?android:textColorPrimary"
                android:text="We at VerseCity also put our audience in mind, therefore our services are made to be so cheap to allow them to happily enjoy the solutions we provide for them"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:visibility="gone"
                android:text="@string/versecity_founder_amp_ce0"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ahmed"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:scaleType="fitCenter"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ahmed_mukhtar_muhammed"
                android:textAlignment="center"
                android:textColor="?android:textColorPrimary"
                android:fontFamily="sans-serif-condensed-medium"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                android:text="@string/versecity_founder_amp_ce0"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed-medium"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entrepreneur_frontend_android_mobile_developer_graphic_designer_writer_philosopher_amp_analyst"
                android:textAlignment="center"
                android:textColor="?android:textColorPrimary"
                android:fontFamily="sans-serif-condensed-medium"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/social_media"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textColor="?android:textColorPrimary"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="150dp"
                android:weightSum="3"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:id="@+id/twitterCeo"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/twitter"
                        android:layout_gravity="center"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?android:textColorPrimary"
                        android:text="@string/twitter"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/instagramCeo"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/instagram"
                        android:layout_gravity="center"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?android:textColorPrimary"
                        android:text="@string/instagram"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/facebookCeo"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/facebook"
                        android:layout_gravity="center"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?android:textColorPrimary"
                        android:text="@string/facebook"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        />



                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
